--- a/web/profile.html
+++ b/web/profile.html
@@ -19,17 +19,17 @@
         <p>User: ${username}</p>
         <p></p>
         <p>Password: <form action="" method="post"><input type="submit" value="Change pass word"></form></p>
-        <label for="dateOfBirthID">Your date of birth:</label>
-        <input type="text" id="dateOfBirthID" name="DateOfBirth" placeholder="DD/MM/YYYY"/>
+
         <p></p>
         <label for="emailID">Email: </label>
         <input type="email" id="emailID" name="email" placeholder="Email" value="${email}"/>
         <p></p>
-
-
     </fieldset>
     <fieldset>
         <legend>Personal profile</legend>
+        <p></p>
+        <label for="dateOfBirthID">Your date of birth:</label>
+        <input type="text" id="dateOfBirthID" name="dateOfBirth" placeholder="DD/MM/YYYY"/>
         <p></p>
         <p>Gender: </p>
         <label for="gender1">Male</label>
@@ -110,7 +110,7 @@
 
         <input type="checkbox" name="issuesCared" value="word And Economy" id="word And Economy">
         <label for="word And Economy"><img src="images_material/E Icons_WEB/E Inverted Icons_RGB/E_INVERTED SDG goals_icons-individual-RGB-08.png" width="120" height="120"></label>
-
+        <br>
 
         <input type="checkbox" name="issuesCared" value="Innovation and Infrastructure" id="Innovation and Infrastructure">
         <label for="Innovation and Infrastructure"><img src="images_material/E Icons_WEB/E Inverted Icons_RGB/E_INVERTED SDG goals_icons-individual-RGB-09.png" width="120" height="120"></label>
@@ -146,7 +146,7 @@
     <p></p>
     <fieldset>
         <legend>About you:    </legend>
-        <textarea id="additionalComment ID" name="profile_text_area" rows="6" cols="80"></textarea>
+        <textarea id="additionalComment ID" name="short_intro" rows="10" cols="80"></textarea>
     </fieldset>
     <p></p>
     <input type="submit" value="Create an Account"/>
