--- a/web/tree_TRIAL/trial_Iframe.html
+++ b/web/tree_TRIAL/trial_Iframe.html
@@ -19,7 +19,7 @@
     </script>
 </head>
 <body>
-<div  style=" width: 10000px; height: 10000px;">
+<div id="map" style=" width: 10000px; height: 10000px;">
     <a  href="#top_right_portal" target="iframe_a"><img id="top_left_portal" src="Tree_Material/Portal.png" height="400px" width="400px" style="position: absolute;"></a>
     <a  href="#bottom_right_portal" target="iframe_a"><img id="top_right_portal" src="Tree_Material/Portal.png" height="400px" width="400px" style="position: absolute;left: 9600px"></a>
     <a  href="#top_left_portal" target="iframe_a"><img id="bottom_left_portal" src="Tree_Material/Portal.png" height="400px" width="400px" style="position: absolute;left: 0px; top: 9600px;"></a>
