--- a/web/tree_TRIAL/trialIframe.html
+++ b/web/tree_TRIAL/trialIframe.html
@@ -47,11 +47,16 @@
 </head>
 <body>
 <div id="seed" >
-    <p>click me to plant your tree!!</p>
+   <p></p>
     <img  src="Tree_Material/sprout.png">
 </div>
 <p></p>
 <form>
+    <input type="text" name="title">
+    <p></p>
+    <textarea name="shortIntro" >Please tell more about your tree...</textarea>
+    <p></p>
+    <p>click me to plant your tree!!</p>
     <label for>Coordinate: </label>
     <input type="number" value="0" id="Xcoordinate" name="X" readonly>
     <input type="number" value="0" id="Ycoordinate" name="Y" readonly>
