--- a/web/tree_TRIAL/trial_Iframe.html
+++ b/web/tree_TRIAL/trial_Iframe.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <style>
         body  {
-            background-image: url("Tree_Material/Mars.jpg");
+            background-image: url("Tree_Material/background_Mars.jpg");
             zoom: 100%;
         }
     </style>
